--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@
             <label for="telefono">Teléfono:</label>
             <input type="tel" id="telefono" name="telefono" required>
         </div>
-        <button type="submit">Enviar</button>
+        <input type="submit" value="Enviar">
     </form>
 </div>
 </body>
