--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
         <div class="form-group">
             <label>Sexo: <span class="required">*</span></label><br>
             <input type="radio" id="masculino" name="sexo" value="masculino" required>
-            <label for="masculino">Masculino</label><br>
+            <label for="masculino">Masculino</label>
             <input type="radio" id="femenino" name="sexo" value="femenino" required>
             <label for="femenino">Femenino</label>
         </div>
@@ -38,7 +38,9 @@
             <input type="tel" id="telefono" name="telefono" placeholder="608030077" required>
             
         </div>
-        <input type="submit" value="Enviar">
+        <div class="div-botones form-group">
+            <input type="submit" value="Enviar">
+        </div>
     </form>
     <p class="message required">Los campos marcados con * son obligatorios.</p>
 </div>
